--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next",
     "build": "node ./scripts/gen-rss.js && next build",
-    "start": "next start"
+    "start": "next start -H 0.0.0.0 -p 3000"
   },
   "dependencies": {
     "gray-matter": "^4.0.3",
